--- a/src/weather.css
+++ b/src/weather.css
@@ -1,10 +1,23 @@
 .weather {
   background: rgb(193, 229, 234);
   border: 1px rgb(193, 229, 234) solid;
-  border-radius: 10px;
+  border-radius: 40px;
 }
 .weather .btn-primary {
   color: rgb(14, 119, 133);
   background: rgb(253, 254, 254);
+  margin-left: -110px;
   border: none;
+  padding: 9px 15px;
+  border-radius: 30px;
+}
+form {
+  margin: 30px 60px 30px 40px;
+}
+
+.search {
+  padding: 8px 70px 8px 10px;
+  border-radius: 30px;
+  border: none;
+  max-width: 100%;
 }
