--- a/src/weather.css
+++ b/src/weather.css
@@ -7,7 +7,7 @@
 }
 .weather .btn-primary {
   color: rgb(14, 119, 133);
-  background: rgb(253, 254, 254);
+  background: #ffffff;
   margin-left: -85px;
   border: none;
   padding: 8px 15px;
@@ -57,4 +57,7 @@ form {
 }
 .weather .description {
   font-weight: 500;
+}
+.weather .description ul li {
+  list-style: none;
 }
