add loader and style it

--- a/src/weather.css
+++ b/src/weather.css
@@ -25,10 +25,9 @@ form {
 }
 .weather .theCity h1 {
   font-size: 30px;
-}
-.weather .theCity h1 {
   color: rgb(9, 96, 107);
 }
+
 .weather .whole {
   margin-left: 50px;
   margin-bottom: 40px;
@@ -65,4 +64,15 @@ form {
 }
 .weather .descript ul li {
   list-style: none;
+}
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.8);
 }
